src/test/ui/const-generics/issues/issue-74634.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-74634.rs:15:11
   |
LL | where (): If<{N == 0}> {
   |           ^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

